// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> should render a a menu item with a link 1`] = `
<styled.li>
  <a
    href="www.google.com"
  >
    <styled.span>
      Test menu item
    </styled.span>
  </a>
</styled.li>
`;

exports[`<MenuItem /> should render a menu item as a submenu if it has children 1`] = `
<Collapsible
  className=""
  classParentString="Collapsible"
  contentInnerClassName=""
  contentOuterClassName=""
  easing="linear"
  lazyRender={false}
  onClose={[Function]}
  onClosing={[Function]}
  onOpen={[Function]}
  onOpening={[Function]}
  open={false}
  openedClassName=""
  overflowWhenOpen="hidden"
  tabIndex={null}
  transitionCloseTime={null}
  transitionTime={250}
  trigger={
<<<<<<< HEAD
    <UNDEFINED
      className={undefined}
    >
=======
    <styled.li>
>>>>>>> b1f90f41b4a4b0cdaa39ee1baf1ddaac8c10c990
      <a
        href="www.google.com"
      >
        <UNDEFINED>
          <IntelliIcon
            type="clock"
          />
        </UNDEFINED>
        <UNDEFINED>
          Father
        </UNDEFINED>
      </a>
    </UNDEFINED>
  }
  triggerClassName=""
  triggerDisabled={false}
  triggerOpenedClassName=""
  triggerSibling={null}
  triggerStyle={null}
  triggerTagName="span"
>
  <styled.ul>
    <MenuItem
      icon={
        <IntelliIcon
          type="clock"
        />
      }
      label="Son"
      overflowWhenOpen="hidden"
      url="www.google.com"
    />
    <MenuItem
      icon={
        <IntelliIcon
          type="clock"
        />
      }
      label="Devil"
      overflowWhenOpen="hidden"
      url="www.google.com"
    />
  </styled.ul>
</Collapsible>
`;

exports[`<MenuItem /> should render a menu item which overflowWhenOpen prop is passed to the Collapsible component 1`] = `
<Collapsible
  className=""
  classParentString="Collapsible"
  contentInnerClassName=""
  contentOuterClassName=""
  easing="linear"
  lazyRender={false}
  onClose={[Function]}
  onClosing={[Function]}
  onOpen={[Function]}
  onOpening={[Function]}
  open={false}
  openedClassName=""
  overflowWhenOpen="visible"
  tabIndex={null}
  transitionCloseTime={null}
  transitionTime={250}
  trigger={
<<<<<<< HEAD
    <UNDEFINED
      className={undefined}
    >
      <a
        href={undefined}
      >
        <UNDEFINED>
=======
    <styled.li>
      <a>
        <styled.span>
>>>>>>> b1f90f41b4a4b0cdaa39ee1baf1ddaac8c10c990
          Test menu item
        </UNDEFINED>
      </a>
    </UNDEFINED>
  }
  triggerClassName=""
  triggerDisabled={false}
  triggerOpenedClassName=""
  triggerSibling={null}
  triggerStyle={null}
  triggerTagName="span"
>
  <styled.ul>
    Something
  </styled.ul>
</Collapsible>
`;

exports[`<MenuItem /> should render a menu item with Icon 1`] = `
<styled.li>
  <a
    href="www.google.com"
  >
    <styled.span>
      <IntelliIcon
        type="clock"
      />
    </styled.span>
    <styled.span>
      Test menu item
    </styled.span>
  </a>
</styled.li>
`;

exports[`<MenuItem /> should render a menu item with active state 1`] = `
<styled.li
  className="active"
>
  <a
    href="www.google.com"
  >
    <styled.span>
      Test menu item
    </styled.span>
  </a>
</styled.li>
`;

exports[`<MenuItem /> should render a menu item with loading state 1`] = `
<styled.li>
  <a
    href="www.google.com"
  >
    <styled.span>
      <IntelliIcon
        type="clock"
      />
    </styled.span>
    <styled.span>
      Test menu item
    </styled.span>
    <styled.span>
      <FontAwesomeIcon
        isSpinning={true}
        type="circle-o-notch"
      />
    </styled.span>
  </a>
</styled.li>
`;

exports[`<MenuItem /> should render a simple menu item 1`] = `
<styled.li>
  <a>
    <styled.span>
      Test menu item
    </styled.span>
  </a>
</styled.li>
`;
